# personalsite

./: .replit  app.py  models.py  pyproject.toml
content/posts/: flask-website.md  minimalism-in-software.md
static/css/: style.css
templates/: base.html  bucketlist.html  index.html  post.html
